/*
 * $Id: ChangeLog,v 1.5145 2006/09/13 13:20:44 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-09-14 11:02 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/hvm.c
    * Restored HASH support in HB_P_IVARREF (used in array assignment syntax hHash["Key"] := Value
    + Added overloading support to  HB_P_IVARREF

2006-09-13 09:17 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbclass.ch
    * Minor formatting

  * include/hbextern.ch
    + Added HB_Crypt and HB_Decrypt

  * source/pp/ppcore.c
    ! Fixed wild match markers to consume lines beyond ';' even when current line reached EOL
    ! Fixed wild match markers to only consume ';' when pending line[s] are not empty.
    ! Fixed wild match markers to pre-process text of pending lines.
    + Added #define directive to list of directives which retain pending lines as 1 unit
  * source/pp/pptable.c
    * Fixed all END* rules to not use wild match markers, which is buggy for compunded rules such as hbclass.ch

2006-09-09 00:05 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/cstr.prg
    * Minor bug correction
  * source/rtl/hbserial.prg
    + Added codeblock support (by Hannes Ziegler)

2006-09-08 14:40 UTC+0300 Mindaugas Kavaliauskas <dbtopas /at/ dbtopas . lt>
  * source/vm/hbi18n.c
    * Removed declaration of unused variable.

2006-09-07 20:05 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/classes.c
    * Corrected usage of hb_param() to hb_paramError() in calls to hb_err*()

2006-09-07 17:02 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/hvm.c
    * Compile warning
  * include/hbextern.ch
    * Few missing symbols

2006-09-07 16:50 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/rtl/cstr.prg
    + Added StringToLiteral() and calll it in ValToPrg()