@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5145 2006/09/13 13:20:44 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5146 2006/09/14 15:04:03 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-09-14 11:31 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
+  * source/vm/classes.c
+    + Added prg callable __ClsCntClasses() to return count of defined classes
 
 2006-09-14 11:02 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * source/vm/hvm.c
